--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "apexcharts": "^3.37.0",
+    "chart.js": "^4.2.0",
+    "faker": "^6.6.6",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5"
