--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "apexcharts": "^3.37.0",
+    "axios": "^1.3.2",
     "chart.js": "^4.2.0",
     "faker": "^6.6.6",
     "next": "13.1.6",
