--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "apexcharts": "^3.37.0",
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
