--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "chart.js": "^4.2.0",
     "faker": "^6.6.6",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
