--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.1.0",
+    "npm-check-updates": "^16.7.10",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
